force-app/main/default/objects/local_govCD__mdt/local_govCD__mdt.object-meta.xml
<CustomObject>
    <description>지방자치단체 코드 &gt; 행정구역코드로 치환</description>
    <label>지방자치단체코드</label>
</CustomObject>