force-app/main/default/objects/local_govCD__mdt/fields/LocalGovCode__c.field-meta.xml
<CustomField>
    <fullName>LocalGovCode__c</fullName>
    <description>지방자치단체 코드</description>
    <label>지방자치단체코드</label>
    <length>255</length>
    <type>Text</type>
</CustomField>