force-app/main/default/objects/local_govCD__mdt/fields/SidoCode__c.field-meta.xml
<CustomField>
    <fullName>SidoCode__c</fullName>
    <description>시도 코드</description>
    <label>시도코드</label>
    <length>255</length>
    <type>Text</type>
</CustomField>