force-app/main/default/objects/local_govCD__mdt/fields/SidoLocalGovCode__c.field-meta.xml
<CustomField>
    <fullName>SidoLocalGovCode__c</fullName>
    <description>시도자치단체코드</description>
    <label>시도자치단체코드</label>
    <length>255</length>
    <type>Text</type>
</CustomField>