force-app/main/default/objects/local_govCD__mdt/fields/SidoName__c.field-meta.xml
<CustomField>
    <fullName>SidoName__c</fullName>
    <description>시도명</description>
    <label>시도명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>