force-app/main/default/objects/local_govCD__mdt/fields/SiGunGuCode__c.field-meta.xml
<CustomField>
    <fullName>SiGunGuCode__c</fullName>
    <description>시군구 코드</description>
    <label>시군구코드</label>
    <length>255</length>
    <type>Text</type>
</CustomField>