force-app/main/default/objects/local_govCD__mdt/fields/SiGunGuName__c.field-meta.xml
<CustomField>
    <fullName>SiGunGuName__c</fullName>
    <description>시군구 이름</description>
    <label>시군구</label>
    <length>255</length>
    <type>Text</type>
</CustomField>